--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^7.5.3",
-    "next": "^13.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "bcryptjs": "2.4.3",
+    "mongoose": "7.5.3",
+    "next": "13.1.1",
+    "next-auth": "4.19.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1"
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1"
   }
 }
