--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.1",
     "bcryptjs": "2.4.3",
-    "mongoose": "7.5.3",
-    "next": "13.1.1",
-    "next-auth": "4.19.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.4",
+    "next": "^13.5.4",
+    "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
