--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_RUI=mongodb://127.0.0.1:27017/next-auth
 SECRETE_KEY=QWERTYUIOPASDFGHJKLXCVBNM1234567890
-GITHUB_ID=1b1552bb781dd7aedc57
-GITHUB_SECRET=9a1ca740e93fb7f5a57cd51b38d73374fc65447c
+GITHUB_ID=
+GITHUB_SECRET=
